fixing size and alignemnt of homepage msg div to look got in phones

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -240,12 +240,12 @@ nav ul li a:hover {
 
 /* ------------------------------------------------------------------- */
 .msg_div {
-    width: 400px;
+    width: 25%;
     padding: 20px;
     text-align: center;
     position: absolute;
     line-height: 1.5;
-    right: 150px;
+    right: 10%;
     box-shadow: 3px 4px 3px 3px white;
     transition: box-shadow 0.3s, transform 0.3s; 
     animation: fadeInText 7s ease forwards;
